Fixed cart and added images

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -109,5 +109,7 @@ body {
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
 @import 'main/main.scss';
+@import 'products/productDetail/productDetail.scss';
+@import 'products/products.scss';
 @import 'modal/modal.scss';
 // endinjector
