--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -39,8 +39,8 @@ img{
     line-height: 1.5;
 }
 
-h1, .h1 {
-    margin-bottom: 60px;
+h1, .header2 {
+    text-align: center;
 }
 
 .hero-unit {
@@ -61,4 +61,8 @@ h1, .h1 {
 
 .navbar-text {
   margin-left: 15px;
+}
+
+p {
+    font-size: 20px;
 }
