--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -42,6 +42,7 @@ img{
     align: center;
     margin-top: 200px;
     margin-bottom: 100px;
+    padding-left: 40px;
     font-size: 30px;
     height: 100px;
     font-family: 'Josefin Sans', sans-serif;
